# SPD

./: CMakeLists.txt  lab1.cpp  test.txt
inc/: permutacja.h  problem.h  rozwiazanie.h  zadanie.h
maszyny_rownolegle/: CMakeLists.txt  dane.txt  wynki.txt
maszyny_rownolegle/inc/: permutacja.h  problem.h  zadanie.h
maszyny_rownolegle/src/: main.cpp  permutacja.cpp  problem.cpp  zadanie.cpp
problem_jednomaszynowy/: 100_Independent0270  100_Independent0297  100_Independent0360  100_Independent0376  100_Independent0428  100_Independent1400  instancja_10.txt  instancja_11.txt  instancja_12.txt  instancja_4.txt  instancja_6.txt  instancja_8.txt  test1.txt  test2.txt
problem_jednomaszynowy/inc/: problem.h
problem_jednomaszynowy/src/: main.cpp  problem.cpp
src/: main.cpp  permutacja.cpp  problem.cpp  rozwiazanie.cpp  zadanie.c  zadanie.cpp
system_przeplywowy/: CMakeLists.txt
system_przeplywowy/inc/: permutacja.h  problem.h  rozwiazanie.h  zadanie.h
system_przeplywowy/src/: main.cpp  permutacja.cpp  problem.cpp  zadanie.cpp
system_przeplywowy/test/: neh.txt  readme.txt  tail_sum.txt
